Polished queries for keyword-relationships #26